Fixed letter-spacing value format

--- a/FrontEnd/src/components/TermsAndConditionsApp/terms_conditions/TermsAndConditionsComponent.module.css
+++ b/FrontEnd/src/components/TermsAndConditionsApp/terms_conditions/TermsAndConditionsComponent.module.css
@@ -22,7 +22,7 @@
     flex-direction: column;
     font-size: 14px;
     line-height: 28px;
-    letter-spacing: -0,14px;
+    letter-spacing: -0.14px;
     padding: 40px 16px;
 }
 
