--- a/FrontEnd/src/pages/PrivacyPolicyPage/PrivacyPolicy.module.css
+++ b/FrontEnd/src/pages/PrivacyPolicyPage/PrivacyPolicy.module.css
@@ -20,7 +20,7 @@
     flex-direction: column;
     font-size: 14px;
     line-height: 28px;
-    letter-spacing: -0,14px;
+    letter-spacing: -0.14px;
     padding: 40px 16px;
 }
 
