--- a/FrontEnd/src/pages/TextRenderingComponents/textAndNavigation.module.css
+++ b/FrontEnd/src/pages/TextRenderingComponents/textAndNavigation.module.css
@@ -3,7 +3,7 @@
     font-size: 14px;
     font-weight: 400;
     line-height: 28px;
-    letter-spacing: -0,14px;
+    letter-spacing: -0.14px;
 }
 
 .text_content__margin_bottom{
@@ -12,7 +12,7 @@
     font-size: 14px;
     font-weight: 400;
     line-height: 28px;
-    letter-spacing: -0,14px;
+    letter-spacing: -0.14px;
 }
 
 .text_content__heading{
@@ -29,7 +29,7 @@
     font-size: 14px;
     font-weight: 400;
     line-height: 28px;
-    letter-spacing: -0,14px;
+    letter-spacing: -0.14px;
 }
 
 .text__margin_top{
@@ -45,6 +45,6 @@
     font-size: 14px;
     font-weight: 400;
     line-height: 28px;
-    letter-spacing: -0,14px;
+    letter-spacing: -0.14px;
 
 }
